[project]
name = "pydagu"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "hypothesis-jsonschema>=0.23.1",
    "pydantic>=2.12.3",
    "pyyaml>=6.0.3",
    "ruff>=0.14.3",
]

[dependency-groups]
dev = [
    "pydagu",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "schemathesis>=4.3.18",
]

[tool.uv.sources]
pydagu = { workspace = true }
