[project]
name = "pydagu"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.12.3",
    "pyyaml>=6.0.3",
]

[dependency-groups]
dev = [
    "pydagu",
    "ruff>=0.14.3",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "hypothesis-jsonschema>=0.23.1",
    "schemathesis>=4.3.18",
]

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
addopts = "-v --strict-markers --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.uv.sources]
pydagu = { workspace = true }
